fix button alignment

--- a/src/index.css
+++ b/src/index.css
@@ -118,12 +118,7 @@ text-shadow: #b38977 2px 2px 2px;
   animation-iteration-count: 1;
   animation-timing-function: ease-in;;
   align-items: center;
-  margin-left: 0%;
-}
-
-@keyframes mymove {
-  from {left: -150%;}
-  to {left: 0%;}
+  margin-left: 40%;
 }
 
 @keyframes mymove {
